--- a/twiller/index.html
+++ b/twiller/index.html
@@ -8,6 +8,18 @@
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      let isProduction = false;
+      let productionURL = "";
+
+      window.getBackendServer = function () {
+        if (isProduction) {
+          return (productionURL = "");
+        } else {
+          return "http://localhost:5000";
+        }
+      };
+    </script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
