--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="root"></div>
     <script>
       let isProduction = true;
-      let productionURL = "https://twiller-ipw6.onrender.com";
+      let productionURL = "https://twiller-server.onrender.com";
 
       window.getBackendServer = function () {
         if (isProduction) {
