--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="root"></div>
     <script>
-      let isProduction = true;
+      let isProduction = false;
       let productionURL = "https://twiller-server.onrender.com";
 
       window.getBackendServer = function () {
